<resources>
    <string name="app_name">Bade</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="OppdaterteBadesteder" />
    <string name="sorter_etter">Sorter etter</string>
    <string name="god_morgen_ole_johan">God Morgen, Ole-Johan!</string>
    <string name="lokasjon">Lokasjon</string>
    <string name="s_k_etter_badesteder">Søk etter badesteder</string>
    <string name="linje">linje</string>
    <string name="badesteder_n">Badesteder nå:</string>
    <string name="hjem">Hjem</string>
    <string name="kart">Kart</string>
    <string name="innstillinger">Innstillinger</string>
    <string name="sist_oppdatert">Sist oppdatert</string>
    <string name="lufttemperatur">Lufttemperatur</string>
    <string name="versjon_1_1_2022">versjon 1.1, 2022</string>
    <string name="degrees">$s °C"</string>
    <string name="badested">Badested</string>
    <string name="xx_x_c">XX.X °C</string>
    <string name="vanntemperatur">Vanntemperatur</string>
    <string name="xx_x_km_unna">XX.X km unna</string>
    <string name="icon">icon</string>
    <string name="xx_x_km_unna_deg">XX,X km unna deg</string>
    <string name="stedsnavn">Stedsnavn</string>
    <string name="xx_xt_med_kj_ring">XX,Xt med kjøring</string>
    <string name="vindstyrke">Vindstyrke</string>
    <string name="luft_temp">Luft Temp</string>
    <string name="laget_av">Laget av: Daniel, Kerim, Eric, Eskil og Morten</string>
    <string-array name="sorting_types">
        <item>Vann Temp</item>
        <item>Luft Temp</item>
        <item>Distanse</item>
    </string-array>
</resources>