<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    tools:context=".ListFragment">

    <android.widget.SearchView
        android:id="@+id/search"
        android:layout_width="385dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:actionViewClass="androidx.appcompat.widget.SearchView"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/GodDag"
        android:layout_width="355dp"
        android:layout_height="29dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="56dp"
        android:text="@string/god_morgen_ole_johan"
        android:textAlignment="center"
        android:textColor="#D3000000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/badestederNaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/badesteder_n"
            android:textColor="#D3000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/SistOppdatert"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/sist_oppdatert"
            android:textColor="#D3000000"
            android:textSize="11sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="385dp"
        android:layout_height="2dp"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/linje"
        android:contentDescription="@string/linje"
        app:layout_constraintBottom_toTopOf="@+id/swipe_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />

    <Spinner
        android:id="@+id/my_spinner"
        android:layout_width="148dp"
        android:layout_height="45dp"
        android:contentDescription="@string/sorter_etter"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="385dp"
        android:layout_height="438dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>