<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="10dp"
    android:layout_height="150dp"
    android:id="@+id/cardView"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/badestedlayout">

        <TextView
            android:id="@+id/badested"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/badested"
            android:textAlignment="viewStart"
            android:textColor="#B8000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/lufttemp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/vaerIkon"
            android:layout_width="49dp"
            android:layout_height="43dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/vanntemp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.363">

        </androidx.appcompat.widget.AppCompatImageView>

        <TextView
            android:id="@+id/lufttemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:elevation="10dp"
            android:text="@string/xx_x_c"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            android:textColor="#B8000000"
            app:layout_constraintEnd_toStartOf="@+id/vaerIkon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/lufttemp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="12dp"
            android:text="@string/lufttemperatur"
            android:textAlignment="viewEnd"
            android:textSize="11sp"

            android:textColor="#B8000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/vaerIkon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lufttemp"
            app:layout_constraintVertical_bias="0.0">

        </TextView>

        <TextView
            android:id="@+id/vanntemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="36dp"
            android:text="@string/xx_x_c"
            android:textAlignment="center"
            android:textColor="#C8FFFFFF"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent">

        </TextView>

        <TextView
            android:id="@+id/vanntemp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vanntemperatur"
            android:textAlignment="viewEnd"
            android:textColor="#C8FFFFFF"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.952"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vanntemp"
            app:layout_constraintVertical_bias="0.0">

        </TextView>

        <TextView
            android:id="@+id/distanse"
            android:layout_width="79dp"
            android:layout_height="17dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="80dp"
            android:text="@string/xx_x_km_unna"
            android:textColor="#B8000000"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>