<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="10dp"
                android:elevation="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/detail_background">

                    <TextView
                        android:id="@+id/text_detail_placeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="56dp"
                        android:text="@string/stedsnavn"
                        android:textAlignment="center"
                        android:textColor="#b9000000"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xx_x_km_unna_deg"
                        android:textAlignment="center"
                        android:textColor="#b3000000"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/duration"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_detail_placeName"
                        app:layout_constraintVertical_bias="1.0" />

                    <TextView
                        android:id="@+id/duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="200dp"
                        android:text="@string/xx_xt_med_kj_ring"
                        android:textAlignment="center"
                        android:textColor="#b9000000"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/bade_temp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/vaerIkon"
                        android:layout_width="84dp"
                        android:layout_height="84dp"
                        android:layout_marginTop="28dp"
                        android:src="@drawable/clearsky_day"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.209"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/duration"
                        android:contentDescription="@string/icon" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/vindstyrke"
                        android:textAlignment="viewEnd"
                        android:textColor="#b9000000"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.452"
                        app:layout_constraintStart_toEndOf="@+id/vaerIkon"
                        app:layout_constraintTop_toBottomOf="@+id/air_temp" />

                    <TextView
                        android:id="@+id/air_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="216dp"
                        android:hint="@string/luft_temp"
                        android:textAlignment="viewEnd"
                        android:textColor="#b9000000"
                        android:textSize="22sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.464"
                        app:layout_constraintStart_toEndOf="@+id/vaerIkon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/bade_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="100dp"
                        android:textAlignment="center"
                        android:textColor="#D3FFFFFF"
                        android:textSize="35sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/wind" />

                    <TextView
                        android:id="@+id/vannTempTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="120dp"
                        android:textColor="#D3FFFFFF"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bade_temp"
                        app:layout_constraintVertical_bias="0.081" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>


</LinearLayout>